<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
>

    <!-- ################################################### -->
    <!-- PLAYER SETTINGS -->
    <PreferenceCategory
        android:background="#252525"
        android:icon="@drawable/ic_player1"
        android:key="pref_key_storage_settings"
        android:title="@string/title_section_settings" 
        android:textColor="#FFFFFF">
        
        <EditTextPreference
            android:defaultValue="/storage/extSdCard/SuperMarioSounds/"
            android:icon="@drawable/ic_player1"
            android:key="pref_key_musicfilepath"
            android:summary="@string/settings_label_musicplayer_filepath_desc"
            android:title="@string/settings_label_musicplayer_filepath" 
            android:textColor="#FFFFFF">
        </EditTextPreference>

        <Preference
            android:icon="@drawable/ic_folderscan_blue_50"
            android:key="pref_key_libraryscan"
            android:title="@string/settings_label_musicplayer_libraryscan" 
            android:textColor="#FFFFFF">
        </Preference>
        
        <Preference
            android:key="pref_key_libraryscan_test"
            android:title="whats up test"
            android:textColor="#FFFFFF" >
        </Preference>
    </PreferenceCategory>

    <!-- ################################################### -->

    <!-- PEDOMETER SETTINGS  -->
    <PreferenceCategory
        android:key="pref_key_storage_settings"
        android:title="@string/title_section_pedometer" 
        android:textColor="#FFFFFF">
        
        <EditTextPreference
            android:key="pref_key_steplength"
            android:inputType="number"
            android:defaultValue="120"
            android:summary="@string/settings_label_pedometer_steplength_desc"
            android:title="@string/settings_label_pedometer_steplength"  
            android:textColor="#FFFFFF">
        </EditTextPreference>
        
        <CheckBoxPreference 
            android:key="pref_key_autostart_pedometer"
            android:defaultValue="true"
            android:title="@string/settings_label_pedometer_autostart_playback"
            android:summary="@string/settings_label_pedometer_autostart_playback_desc"/>
        
        <EditTextPreference
            android:key="pref_key_minimum_playbacktime"
            android:inputType="number"
            android:defaultValue="30"
            android:summary="@string/settings_label_pedometer_minimum_playbacktime_desc"
            android:title="@string/settings_label_pedometer_minimum_playbacktime"  
            android:textColor="#FFFFFF">
        </EditTextPreference>
        
    </PreferenceCategory>

</PreferenceScreen>