<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="70dp"
    android:layout_margin="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp"
    android:padding="5dp" >

    <ImageView
        android:id="@+id/playlistitem_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="6dip"
        android:contentDescription="@string/title_section_playlist"
        android:src="@drawable/ic_player1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/playlistitem_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/playlist_placeholder_title"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/playlistitem_artist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:text="@string/playlist_placeholder_artist"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/playlistitem_duration"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:text="@string/playlist_placeholder_duration"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/playlistitem_bpm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:text="@string/playlist_placeholder_bpm"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>